change theme color

--- a/vcastplay-cms/src/app/components/drawer/drawer.component.html
+++ b/vcastplay-cms/src/app/components/drawer/drawer.component.html
@@ -3,7 +3,7 @@
         @for (menu of menuItems(); track $index) {
             <li 
                 (click)="onToggleMenu(menu, $event)"
-                class="relative px-4 py-3 list-none hover:bg-orange-600 flex flex-col items-center justify-center w-full hover:rounded-md cursor-pointer"
+                class="relative px-4 py-3 list-none hover:bg-[var(--p-primary-600)] flex flex-col items-center justify-center w-full hover:rounded-md cursor-pointer"
             >
                 <i style="font-size: 1.5rem;" class="mb-2 text-white" [class]="menu.icon"></i>
                 <p class="text-white !select-none">{{ menu.label }}</p>
@@ -16,11 +16,11 @@
             </li>
         }
         <div class="absolute bottom-0 start-0 w-full flex flex-col gap-3">
-            <li class="px-4 py-3 list-none hover:bg-orange-600 flex flex-col items-center justify-center w-full hover:rounded-md cursor-pointer text-white">
+            <li class="px-4 py-3 list-none hover:bg-[var(--p-primary-600)] flex flex-col items-center justify-center w-full hover:rounded-md cursor-pointer text-white">
                 <i style="font-size: 1.5rem;" class="mb-2" class="pi pi-info-circle"></i>
                 <p class="!select-none">About</p>
             </li>
-            <li (click)="onClickLogout($event)" class="px-4 py-3 list-none hover:bg-orange-600 flex flex-col items-center justify-center w-full hover:rounded-md cursor-pointer text-white">
+            <li (click)="onClickLogout($event)" class="px-4 py-3 list-none hover:bg-[var(--p-primary-600)] flex flex-col items-center justify-center w-full hover:rounded-md cursor-pointer text-white">
                 <i style="font-size: 1.5rem;" class="mb-2" class="pi pi-sign-out"></i>
                 <p class="!select-none">Logout</p>
             </li>
@@ -35,7 +35,7 @@
         @for (menu of menuItems(); track $index) {
             <li 
                 (click)="onToggleMenu(menu, $event)"
-                class="relative px-4 py-3 list-none hover:bg-gray-100 flex flex-row justify-between items-center w-full hover:rounded-md cursor-pointer"
+                class="relative px-4 py-3 list-none hover:bg-[var(--p-primary-600)] hover:text-white flex flex-row justify-between items-center w-full hover:rounded-md cursor-pointer"
             >
                 <div class="flex flex-row gap-2">
                     <i style="font-size: 1.5rem;" class="mb-2" [class]="menu.icon"></i>
@@ -48,18 +48,18 @@
             @if (menu.items && menu.expanded) {
                 <ul class="ml-[3rem]">
                     @for (subMenu of menu.items; track $index) {
-                        <li (click)="onClickGotoPage(subMenu)" class="relative px-4 py-3 list-none hover:bg-gray-100 flex flex-row w-full hover:rounded-md cursor-pointer">
+                        <li (click)="onClickGotoPage(subMenu)" class="relative px-4 py-3 list-none hover:bg-[var(--p-primary-600)] hover:text-white flex flex-row w-full hover:rounded-md cursor-pointer">
                             <p>{{ subMenu.label }}</p>
                         </li>
                     }
                 </ul>
             }
         }
-        <li class="px-4 py-3 list-none hover:bg-gray-100 flex flex-row gap-2 w-full hover:rounded-md cursor-pointer">
+        <li class="px-4 py-3 list-none hover:bg-[var(--p-primary-600)] hover:text-white flex flex-row gap-2 w-full hover:rounded-md cursor-pointer">
             <i style="font-size: 1.5rem;" class="mb-2" class="pi pi-info-circle"></i>
             <p class="!select-none">About</p>
         </li>
-        <li (click)="onClickLogout($event)" class="px-4 py-3 list-none hover:bg-gray-100 flex flex-row gap-2 w-full hover:rounded-md cursor-pointer">
+        <li (click)="onClickLogout($event)" class="px-4 py-3 list-none hover:bg-[var(--p-primary-600)] hover:text-white flex flex-row gap-2 w-full hover:rounded-md cursor-pointer">
             <i style="font-size: 1.5rem;" class="mb-2" class="pi pi-sign-out"></i>
             <p class="!select-none">Logout</p>
         </li>
