--- a/vcastplay-cms/src/app/components/toolbar/toolbar.component.html
+++ b/vcastplay-cms/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <div class="toolbar-container justify-between h-20">
     <a class="w-[10rem]" href="/">
-        <img src="assets/vcast-white.png" alt="app logo">
+        <img src="assets/vcast-logo.png" alt="app logo">
     </a>
     <div class="flex flex-row items-center cursor-pointer text-white">
         <p-avatar label="N" shape="circle" size="large" [routerLink]="['/settings/profile']"></p-avatar>
