--- a/vcastplay-cms/src/app/main/main.component.html
+++ b/vcastplay-cms/src/app/main/main.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="block md:hidden absolute bottom-0 end-0 z-100">
-            <div class="bg-orange-500 py-[1rem] px-[1.125rem] text-white rounded-tl-xl cursor-pointer" (click)="utils.drawerVisible.set(!utils.drawerVisible())">
+            <div class="bg-[var(--p-primary-600)] py-[1rem] px-[1.125rem] text-white rounded-tl-xl cursor-pointer" (click)="utils.drawerVisible.set(!utils.drawerVisible())">
                 <i class="pi pi-bars"></i>
             </div>
         </div>
