--- a/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
+++ b/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
@@ -1,44 +1,27 @@
-<!-- <div class="flex flex-col gap-5">
-    
-    <div class="md:absolute top-0 right-0 w-full md:w-[40%] lg:w-[35%] xl:w-[25%] z-50 md:m-5 shadow-lg">
-        <p-accordion [value]="0">
-            <p-accordion-panel value="0" >
-                <p-accordion-header [style]="{ 'background-color': 'var(--p-primary-500)', 'color': 'white' }">My Subscription Plan</p-accordion-header>
-                <p-accordion-content><app-subscription-plan /></p-accordion-content>
-            </p-accordion-panel>
-        </p-accordion>
-    </div>
-    
-    <div class="w-full md:h-full md:absolute top-0 left-0">
-        <app-screen-map />
-    </div>
-
-    <div class="md:absolute w-full md:w-[30%] lg:w-[25%] top-20 left-0 md:m-5 z-30 shadow-lg">
-        <p-accordion value="0" styleClass="h-[34px]">
-            <p-accordion-panel value="0">
-                <p-accordion-header>Screen Status</p-accordion-header>
-                <p-accordion-content><app-screen-status /></p-accordion-content>
-            </p-accordion-panel>
-            <p-accordion-panel value="1">
-                <p-accordion-header>Screen Lists</p-accordion-header>
-                <p-accordion-content><app-screen-lists /></p-accordion-content>
-            </p-accordion-panel>
-        </p-accordion>
-    </div>
-</div> -->
-
 <div class="flex flex-col gap-5 h-full">
     <div class="flex justify-between items-center">
         <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-        <p-button class="hidden md:block" severity="secondary" label="Upgrade Subscription" severity="primary" pTooltip="Purchase More Licenses" tooltipPosition="bottom" icon="pi pi-angle-double-up" />
-        <p-button class="md:hidden" severity="secondary" label="Upgrade" severity="primary" pTooltip="Purchase More Licenses" tooltipPosition="bottom" icon="pi pi-angle-double-up" />
+        <p-button 
+            class="hidden md:block" 
+            severity="primary" 
+            label="Upgrade Subscription" 
+            pTooltip="Purchase More Licenses"
+            tooltipPosition="bottom" 
+            icon="pi pi-angle-double-up" />
+        <p-button 
+            class="md:hidden" 
+            label="Upgrade" 
+            severity="primary" 
+            pTooltip="Purchase More Licenses" 
+            tooltipPosition="bottom" 
+            icon="pi pi-angle-double-up" />
     </div>
     <div class="grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
         <p-card styleClass="h-full">
             <ng-template #title>
                 <div class="flex justify-between items-center gap-5">
                     <p class="text-4xl font-bold">3</p>
-                    <div class="bg-green-500 p-3 rounded-lg text-white">
+                    <div class="bg-green-900 p-3 rounded-lg text-white">
                         <i class="pi pi-desktop" style="font-size: 1.5rem;"></i>
                     </div>
                 </div>
@@ -51,7 +34,7 @@
             <ng-template #title>
                 <div class="flex justify-between items-center gap-5">
                     <p class="text-4xl font-bold">2</p>
-                    <div class="bg-red-500 p-3 rounded-lg text-white">
+                    <div class="bg-red-900 p-3 rounded-lg text-white">
                         <i class="pi pi-desktop" style="font-size: 1.5rem;"></i>
                     </div>
                 </div>
@@ -64,18 +47,18 @@
             <ng-template #title>
                 <div class="flex justify-between items-center gap-5">
                     <p class="text-3xl font-bold">50% <span class="text-sm font-normal">storage</span></p>
-                    <div class="bg-orange-500 p-3 rounded-lg text-white">
+                    <div class="bg-orange-700 p-3 rounded-lg text-white">
                         <i class="pi pi-database" style="font-size: 1.5rem;"></i>
                     </div>
                 </div>
             </ng-template>
             <div class="mt-4">
-                <p-progressbar [value]="50" [showValue]="false" [style]="{ height: '8px'}" />
+                <p-progressbar [value]="50" [showValue]="false" class="storage-progressbar" />
             </div>
             <ng-template #footer>
-                <div class="flex justify-between">
-                    <p>Used: 50 GB</p>
-                    <p>Limit: 100 GB</p>
+                <div class="flex justify-between text-sm xl:text-base">
+                    <p>Used: <span class="font-semibold">50 GB</span></p>
+                    <p>Limit: <span class="font-semibold">100 GB</span></p>
                 </div>
             </ng-template>
         </p-card>
@@ -84,20 +67,20 @@
                 <div class="flex justify-between items-center gap-5">
                     <div class="flex items-center gap-2">
                         <p class="text-xl font-bold">Premium Plan</p>
-                        <i class="pi pi-verified text-green-500" pTooltip="You’re on the Premium Plan – all features unlocked." tooltipPosition="bottom"></i>
+                        <i class="pi pi-verified text-green-900" pTooltip="You’re on the Premium Plan – all features unlocked." tooltipPosition="bottom"></i>
                     </div>
-                    <div class="bg-blue-500 p-3 rounded-lg text-white">
+                    <div class="bg-blue-900 p-3 rounded-lg text-white">
                         <i class="pi pi-credit-card" style="font-size: 1.5rem;"></i>
                     </div>
                 </div>
             </ng-template>
             <div class="mt-4">
-                <p-progressbar [value]="60" [showValue]="false" [style]="{ height: '8px'}" color="blue" />
+                <p-progressbar [value]="60" [showValue]="false" class="subscription-progressbar" />
             </div>
             <ng-template #footer>
-                <div class="flex justify-between">
-                    <p>Used: 5</p>
-                    <p>Total: 10</p>
+                <div class="flex justify-between text-sm xl:text-base">
+                    <p>Used License: <span class="font-semibold">6</span></p>
+                    <p>Total License: <span class="font-semibold">10</span></p>
                 </div>
             </ng-template>
         </p-card>
