--- a/vcastplay-cms/src/app/pages/settings/profile/profile.component.html
+++ b/vcastplay-cms/src/app/pages/settings/profile/profile.component.html
@@ -45,7 +45,7 @@
                 <div class="col-span-2 pt-5">
                     <div class="flex gap-3 float-right">
                         <p-button label="Cancel" severity="secondary" (onClick)="userForm.reset()" />
-                        <p-button label="Update" severity="success" />
+                        <p-button label="Update" (onClick)="onClickUpdate($event, 'personal')" />
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 <div class="col-span-2 pt-5">
                     <div class="flex gap-3 float-right">
                         <p-button label="Cancel" severity="secondary" (onClick)="securityForm.reset()" />
-                        <p-button label="Update" severity="success" />
+                        <p-button label="Update" />
                     </div>
                 </div>
             </div>
