--- a/vcastplay-cms/src/app/components/dashboard/screen-map/screen-map.component.html
+++ b/vcastplay-cms/src/app/components/dashboard/screen-map/screen-map.component.html
@@ -1,5 +1,5 @@
-<div class="md:absolute top-0 left-0 md:w-[50%] lg:w-[30%] z-20 md:m-5 my-5">
-    <div class="flex flex-col items-center gap-2 w-full h-full p-2 mb-3 rounded-sm bg-white justify-between shadow-lg" [ngClass]="{ 'hidden': selectedScreen() || isMobile }">
+<div class="md:absolute md:top-0 md:left-0 md:w-[50%] lg:w-[30%] z-20 md:m-5 my-5">
+    <div class="flex flex-col items-center gap-2 w-full h-full p-2 mb-3 rounded-sm bg-white justify-between shadow-lg">
         <div class="flex w-full gap-2">
             <p-inputgroup>
                 <input type="text" pInputText [(ngModel)]="keywords" placeholder="Search Screen" />
@@ -99,4 +99,4 @@
     }
 </div>
 
-<div id="screenMap" class="rounded-lg z-10" #screenMap></div>
+<div id="screenMap" class="rounded-lg z-5" #screenMap></div>
