--- a/vcastplay-cms/src/app/main/main.component.html
+++ b/vcastplay-cms/src/app/main/main.component.html
@@ -2,7 +2,7 @@
     <app-toolbar></app-toolbar>
     <app-drawer></app-drawer>
     <div class="main-wrapper relative">
-        <div class="main-content p-3 md:p-[2rem] bg-gray-200 relative">
+        <div class="main-content p-3 md:p-[2rem] bg-gray-200 relative md:rounded-tl-[26px]">
             <router-outlet></router-outlet>
         </div>
 
