--- a/vcastplay-cms/src/app/pages/auth/login/login.component.html
+++ b/vcastplay-cms/src/app/pages/auth/login/login.component.html
@@ -1,35 +1,49 @@
-<div class="flex flex-col items-center justify-center w-screen h-screen relative bg-gray-200 p-3 sm:p-10 md:p-20">
-    <p-card class="w-full md:w-[30rem]">
-        <ng-template #header>
-            <div class="relative flex items-center justify-center">
-                <img class="absolute" src="assets/vcast-white.png" width="150" alt="logo">
-                <img src="assets/background.jpg" class="h-[8rem] w-full object-cover rounded-t-xl" alt="banner">
-            </div>
-        </ng-template>
-        <ng-template #title>
-            <p class="text-2xl font-bold">Login to your account</p>
-        </ng-template>
-        <form class="grid grid-cols-1 gap-4 my-[2rem]" [formGroup]="auth.loginForm">
-            <p-floatlabel variant="in">
-                <input id="username" pInputText formControlName="username" [fluid]="true" />
-                <label for="username">Username*</label>
-            </p-floatlabel>
-            <p-floatlabel variant="in">
-                <p-password formControlName="password" inputId="password" [toggleMask]="true" [fluid]="true" [feedback]="false" />
-                <label for="password">Password*</label>
-            </p-floatlabel>
-            <div class="flex justify-between items-center">
-                <div class="flex items-center">
-                    <p-checkbox inputId="rememberMe" formControlName="rememberMe" [binary]="true" />
-                    <label for="rememberMe" class="ml-2">Remember Me</label>
+<div class="grid grid-cols-5 w-full h-screen">
+    <div class="col-span-3 hidden lg:block relative">
+        <div class="absolute top-0 left-0 m-5 z-50">
+            <img src="assets/vcast-logo.png" alt="app logo">
+        </div>
+        <p-carousel [value]="slides" [numVisible]="1" [numScroll]="1" [circular]="true" [showIndicators]="false" [showNavigators]="false" [autoplayInterval]="5000">
+            <ng-template let-item #item>
+                <div class="flex items-center justify-center w-full h-screen relative">
+                    <img [src]="item.image" class="w-full h-full object-cover" alt="banner">
+                    <div class="absolute top-0 left-0 w-full h-full bg-[var(--p-primary-500)] opacity-70"></div>
+                    <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center text-center">
+                        <p class="text-[2.75rem] font-bold text-white">"{{ item.text }}"</p>
+                    </div>
                 </div>
-                <a href="/" class="hover:text-orange-500">Forgot Password?</a>
-            </div>
-        </form>
-        <ng-template #footer>
-            <p-button (onClick)="auth.onLogin()" styleClass="w-full" label="Login" />
-        </ng-template>
-    </p-card>
+            </ng-template>
+        </p-carousel>
+    </div>
+    <div class="col-span-5 lg:col-span-2">
+        <div class="flex flex-col items-center justify-center h-full relative bg-gray-100 p-3 md:p-10 relative">
+            <p-card class="w-full md:w-[30rem]">
+                <ng-template #title>
+                    <p class="text-2xl font-bold">Login to your account</p>
+                </ng-template>
+                <form class="grid grid-cols-1 gap-4 my-[2rem]" [formGroup]="auth.loginForm">
+                    <p-floatlabel variant="in">
+                        <input id="username" pInputText formControlName="username" [fluid]="true" />
+                        <label for="username">Username*</label>
+                    </p-floatlabel>
+                    <p-floatlabel variant="in">
+                        <p-password formControlName="password" inputId="password" [toggleMask]="true" [fluid]="true" [feedback]="false" />
+                        <label for="password">Password*</label>
+                    </p-floatlabel>
+                    <div class="flex justify-between items-center">
+                        <div class="flex items-center">
+                            <p-checkbox inputId="rememberMe" formControlName="rememberMe" [binary]="true" />
+                            <label for="rememberMe" class="ml-2">Remember Me</label>
+                        </div>
+                        <a href="/" class="hover:text-orange-500">Forgot Password?</a>
+                    </div>
+                </form>
+                <ng-template #footer>
+                    <p-button (onClick)="auth.onLogin()" styleClass="w-full" label="Login" />
+                </ng-template>
+            </p-card>
+        </div>
+    </div>
 </div>
 
 <p-toast />
