--- a/vcastplay-cms/src/app/pages/settings/roles/roles.component.html
+++ b/vcastplay-cms/src/app/pages/settings/roles/roles.component.html
@@ -3,69 +3,72 @@
 
     <div class="flex-1">
         <p-card styleClass="h-full">
-            <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
-                <app-filters class="w-full md:w-[25rem]"></app-filters>
-                <div class="flex gap-3">
-                    <p-button (onClick)="onClickAddNew()" label="Add New" icon="pi pi-plus" />
-                    <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
+            <div class="flex flex-col gap-4">
+                <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
+                    <app-filters class="w-full md:w-[25rem]"></app-filters>
+                    <div class="flex gap-3">
+                        <p-button (onClick)="onClickAddNew()" label="Add Role" icon="pi pi-plus" />
+                        <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
+                    </div>
                 </div>
             </div>
-            <p-table
-                class="hidden lg:block" 
-                [value]="isLoading() ? utils.tableSkeletonRows : filteredRoles()" 
-                selectionMode="single"
-                [scrollable]="true" 
-                size="small"  
-                stripedRows
-                [rows]="8"
-            >
-                <ng-template #header>
-                    <tr>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Status</th>
-                        <th>Last Update</th>
-                        <th>Actions</th>
-                    </tr>
-                </ng-template>
-                <ng-template #body let-item>
-                    @if (isLoading()) {
+            <div class="flex-1 h-full">
+                <p-table
+                    class="hidden lg:block" 
+                    [value]="isLoading() ? utils.tableSkeletonRows : filteredRoles()" 
+                    selectionMode="single"
+                    [scrollable]="true" 
+                    size="small"  
+                    stripedRows
+                >
+                    <ng-template #header>
                         <tr>
-                            <td><p-skeleton height="2rem" /></td>
-                            <td><p-skeleton height="2rem" /></td>
-                            <td><p-skeleton height="2rem" /></td>
-                            <td><p-skeleton height="2rem" /></td>
-                            <td><p-skeleton height="2rem" /></td>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Status</th>
+                            <th>Last Update</th>
+                            <th>Actions</th>
                         </tr>
-                    } @else {
-                        <tr [pSelectableRow]="item">
-                            <td>{{ item.name }}</td>
-                            <td>{{ item.description }}</td>
-                            <td><p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" /></td>
-                            <td>{{ item.updatedOn | date: 'mediumDate' }}</td>
-                            <td class="flex flex-row" alignFrozen="right">
+                    </ng-template>
+                    <ng-template #body let-item>
+                        @if (isLoading()) {
+                            <tr>
+                                <td><p-skeleton height="2rem" /></td>
+                                <td><p-skeleton height="2rem" /></td>
+                                <td><p-skeleton height="2rem" /></td>
+                                <td><p-skeleton height="2rem" /></td>
+                                <td><p-skeleton height="2rem" /></td>
+                            </tr>
+                        } @else {
+                            <tr [pSelectableRow]="item">
+                                <td>{{ item.name }}</td>
+                                <td>{{ item.description }}</td>
+                                <td><p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" /></td>
+                                <td>{{ item.updatedOn | date: 'mediumDate' }}</td>
+                                <td class="flex flex-row" alignFrozen="right">
+                                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
+                                </td>
+                            </tr>
+                        }
+                    </ng-template>
+                </p-table>
+                <div class="block lg:hidden grid grid-cols-1 gap-5">
+                    @for (item of filteredRoles(); track $index) {
+                        <div class="flex flex-row gap-2 justify-between items-center p-[1rem] border border-gray-200 rounded-lg">
+                            <div class="flex flex-col">
+                                <h6 class="font-semibold">{{ item.name }}</h6>
+                                <p>{{ item.description }}</p>
+                            </div>
+                            <div class="flex flex-row">
                                 <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
-                            </td>
-                        </tr>
-                    }
-                </ng-template>
-            </p-table>
-            <div class="block lg:hidden grid grid-cols-1 gap-5">
-                @for (item of filteredRoles(); track $index) {
-                    <div class="flex flex-row gap-2 justify-between items-center p-[1rem] border border-gray-200 rounded-lg">
-                        <div class="flex flex-col">
-                            <h6 class="font-semibold">{{ item.name }}</h6>
-                            <p>{{ item.description }}</p>
+                            </div>
                         </div>
-                        <div class="flex flex-row">
-                            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
-                        </div>
-                    </div>
-                } @empty {
-                    @for (item of utils.tableSkeletonRows; track $index) {
-                        <p-skeleton height="5rem" />
+                    } @empty {
+                        @for (item of utils.tableSkeletonRows; track $index) {
+                            <p-skeleton height="5rem" />
+                        }
                     }
-                }
+                </div>
             </div>
             <ng-template #footer>
                 <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
@@ -80,7 +83,7 @@
 </ng-template>
 
 <p-dialog header="Role Information" [(visible)]="showDialog" styleClass="w-[30rem] md:w-[40rem] h-auto" [modal]="true" [draggable]="false">
-    <div class="grid grid-cols-1 gap-4 mb-8" [formGroup]="roleForm">
+    <div class="grid grid-cols-1 gap-4" [formGroup]="roleForm">
         <div class="cols-span-1">
             <p-floatlabel variant="in">
                 <input id="name" pInputText formControlName="name" 
@@ -98,7 +101,7 @@
         </div>
         <div class="col-span-1">
             <p-floatlabel variant="in">
-                <textarea pTextarea id="description" formControlName="description" rows="5" cols="30" style="resize: none" class="h-full w-full"
+                <textarea pTextarea id="description" formControlName="description" rows="3" cols="30" style="resize: none" class="h-full w-full"
                     [ngClass]="{ 'ng-invalid ng-dirty': formControl('description')?.invalid && formControl('description')?.touched }"></textarea>
                 <label for="description">Description</label>
             </p-floatlabel>
@@ -112,10 +115,32 @@
             }
         </div>
     </div>
-    <div class="flex justify-end gap-2">
+    <p-panel header="Permissions" toggleable>
+        <p-table [value]="modules" [scrollable]="true" scrollHeight="200px">
+            <ng-template #header>
+                <tr>
+                    <th>Name</th>
+                    <th><p class="text-center">Create</p></th>
+                    <th><p class="text-center">Update</p></th>
+                    <th><p class="text-center">Delete</p></th>
+                </tr>
+            </ng-template>
+            <ng-template #body let-item>
+                <tr>
+                    <td class="flex gap-3">
+                        <p-toggleswitch [ngModel]="isModuleSelected(item)" (onChange)="onAddModule(item)" /> {{ item.label }}
+                    </td>
+                    <td><div class="flex justify-center"><p-checkbox /></div></td>
+                    <td><div class="flex justify-center"><p-checkbox /></div></td>
+                    <td><div class="flex justify-center"><p-checkbox /></div></td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </p-panel>
+    <ng-template #footer>
         <p-button label="Cancel" severity="secondary" (onClick)="onClickCancel()" />
         <p-button label="Save" (onClick)="onClickSave($event)" />
-    </div>
+    </ng-template>
 </p-dialog>
 
 <p-toast />
